second option built in below

--- a/index.html
+++ b/index.html
@@ -96,6 +96,17 @@
     
     </div>
 
+    <div class="material">
+        <img src="media/alles.png" alt="">
+    </div>
+
+    <div class="material">
+        <div class="material-einzeln">
+            <img src="media/u nterrichtsmaterial.png" alt="">
+            <a href="media/probe.pdf">Unterrichtsmaterial</a>
+        </div>
+    </div>
+
 <script>
 let popup1 = document.getElementById("forschung");
 
