--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </div>
 
 
-        <img class="material alles" src="media/alles.png" alt="">
+        <img class="material alles" src="media/alles.PNG" alt="">
 
 
 
