--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <a class="linktext" href="media/probe.pdf">Infos zum Darwintag</a>
         </div>
         <div class="material-einzeln">
-            <img class="vorschaubild" src="media/grafik.png" alt="">
+            <img class="vorschaubild" src="media/forschungsarbeit.png" alt="">
             <a class="linktext" href="media/probe.pdf">Grafiken</a>
         </div>
         <div class="material-einzeln">
